@startuml Chain of Responsibility Pattern - ElementarClash

!define ABSTRACT_CLASS abstract class

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor<<Handler>> LightYellow
    BorderColor<<Handler>> DarkOrange
    BackgroundColor<<ConcreteHandler>> LightBlue
    BorderColor<<ConcreteHandler>> DarkBlue
    BackgroundColor<<Context>> LightGreen
    BorderColor<<Context>> DarkGreen
    BackgroundColor<<ValueObject>> Wheat
    BorderColor<<ValueObject>> Brown
}

' ===== Abstract Handler =====
ABSTRACT_CLASS DamageHandler <<Handler>> {
    - next: DamageHandler
    __
    + setNext(next: DamageHandler): DamageHandler
    + handle(context: DamageContext): void
}

' ===== Concrete Handler (exemplarisch) =====
class BaseDamageHandler <<ConcreteHandler>> {
    + handle(context: DamageContext): void
}

' ===== Chain Builder / Client =====
class DamageCalculator <<Context>> {
    - handlerChain: DamageHandler
    __
    + DamageCalculator()
    + calculateDamage(attacker: Unit, target: Unit, game: Game): DamageResult
}

' ===== Shared State =====
class DamageContext <<Context>> {
    - attacker: Unit
    - target: Unit
    - game: Game
    - calculationSteps: List<String>
    __
    - baseDamage: int = 0
    - factionMultiplier: double = 1.0
    - terrainAttackBonus: int = 0
    - terrainDefenseBonus: int = 0
    - synergyBonus: int = 0
    - totalDefense: int = 0
    - finalDamage: int = 0
    __
    + DamageContext(attacker, target, game)
    + setBaseDamage(baseDamage: int): void
    + applyFactionMultiplier(multiplier: double): void
    + addTerrainAttackBonus(bonus: int): void
    + addTerrainDefenseBonus(bonus: int): void
    + addSynergyBonus(bonus: int): void
    + setTotalDefense(defense: int): void
    + setFinalDamage(damage: int): void
    + getTotalAttack(): int
    + toResult(): DamageResult
}

' ===== Immutable Result =====
class "DamageResult\n<<record>>" as DamageResult <<ValueObject>> {
    + totalDamage: int
    + baseDamage: int
    + factionMultiplier: double
    + terrainAttackBonus: int
    + terrainDefenseBonus: int
    + synergyBonus: int
    + totalDefense: int
    + calculationSteps: List<String>
}

' ===== Inheritance =====
DamageHandler <|-- BaseDamageHandler

' ===== Chain Links =====
DamageHandler o-right-> DamageHandler : next

' ===== Associations =====
DamageCalculator *-down-> DamageHandler : handlerChain
DamageCalculator ..> DamageContext : <<creates>>
DamageContext ..> DamageResult : toResult()
DamageHandler ..> DamageContext : <<modifies>>

@enduml
